tests/baselines/reference/collisionThisExpressionAndVarInGlobal(strict=true).errors.txt
collisionThisExpressionAndVarInGlobal.ts(2,15): error TS7041: The containing arrow function captures the global value of 'this'.


==== collisionThisExpressionAndVarInGlobal.ts (1 errors) ====
    var _this = 1;
    var f = () => this;
                  ~~~~
!!! error TS7041: The containing arrow function captures the global value of 'this'.